# Dementia_Classification_n_Forcasting

./: .gitignore  DATA_CARD.md  DEPENDENCY_AUDIT.md  FUSION_MODEL_REVIEW.md  LICENSE  MODEL_CARD.md  PROJECT_STATUS.md  README.md  REPO_TREE.txt  REQUIREMENTS.md  REQUIREMENTS_CHECKLIST.md  dev.sh  pyproject.toml
.cursor/plans/: EXECUTION_PLAN.md
.devcontainer/: devcontainer.json  setup.sh
configs/: default.yaml
dementia_project/: __init__.py
dementia_project/asr/: README.md  __init__.py  run_asr.py  transcribe.py
dementia_project/data/: __init__.py  build_metadata.py  build_splits.py  fix_asr_manifest.py  io.py  name_normalize.py  rebuild_asr_manifest.py  splitting.py
dementia_project/explain/: text_explain.py
dementia_project/export/: __init__.py  onnx_export.py  run_onnx_export.py  test_onnx.py
dementia_project/features/: __init__.py  align_audio.py  audio_features.py  spectrograms.py  text_features.py  wav2vec2_embed.py
dementia_project/infer/: __init__.py  predict.py  run_inference.py
dementia_project/models/: __init__.py  fusion_model.py
dementia_project/segmentation/: __init__.py  build_manifests.py  build_word_segments.py  time_windows.py  word_segments.py
dementia_project/train/: __init__.py  fusion_dataset.py  robustness_tests.py  train_densenet_spec.py  train_fusion.py  train_nonml.py  train_text_baseline.py  train_wav2vec2_nonml.py
dementia_project/viz/: __init__.py  explainability.py  metrics.py  run_explainability.py
notebooks/: BERT_CARD.md  final_report.ipynb  final_report_merged.ipynb
tests/: test_name_normalize.py  test_text_classifier.py  test_text_features.py
tools/: fix_splits.py
