[tool.poetry]
name = "dementia-classification"
version = "0.1.0"
description = "Multimodal dementia classification (audio+ASR text) with baselines, fusion, and ONNX export."
authors = ["Alwin Philip", "Lucas Liona", "David Majomi"]
readme = "README.md"
packages = [{ include = "dementia_project" }]

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
numpy = "^2.2.0"
pandas = "^2.2.3"
scikit-learn = "^1.6.0"
pyyaml = "^6.0.2"
tqdm = "^4.67.1"
soundfile = "^0.13.1"
librosa = "^0.10.2.post1"
matplotlib = "^3.10.0"
seaborn = "^0.13.2"
torch = "^2.6.0"
torchaudio = "^2.6.0"
torchvision = "^0.21.0"
transformers = "^4.47.0"
datasets = "^3.2.0"
accelerate = "^1.2.1"
captum = "^0.7.0"
onnx = "^1.17.0"
onnxruntime = "^1.20.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
black = "^24.10.0"

[tool.black]
line-length = 88
target-version = ["py310"]

[build-system]
requires = ["poetry-core>=1.9.0"]
build-backend = "poetry.core.masonry.api"


